solved the issue with responsiveness in mobile view

--- a/code/style.css
+++ b/code/style.css
@@ -93,9 +93,8 @@ header {
     flex-direction: column;
   }
   .big-news {
-    overflow: hidden; !important
+    overflow: hidden !important;
   }
-  big-news
 
 .big-news-image {
   width: auto;
