--- a/code/style.css
+++ b/code/style.css
@@ -8,7 +8,7 @@ html {
 header {
   background-color: whitesmoke;
   width: 100%;
-  height: 120px;
+  height: 110px;
   display: flex;
   flex-direction: row;
   justify-content: flex-start;
@@ -54,7 +54,7 @@ a {
 }
 
 .big-news {
-margin-top: 100px;
+margin-top: 110px;
 display: flex;
 flex-wrap: wrap;
 flex-direction: column;
@@ -72,7 +72,6 @@ justify-content: center;
 }
 
 .grid-news {
-  /* margin: 5%; */
   display: flex;
   flex-wrap: wrap; 
  }
@@ -118,8 +117,8 @@ align-items: center;
 /* Adding styling for tablet */
 @media (min-width: 668px) and (max-width: 1024px) {
   nav {
-    display:flex;
-    width: 100%;
+    /* display:flex;
+    width: 100%; */
     align-items: center;
     justify-content: space-around;
   }
@@ -135,11 +134,10 @@ align-items: center;
   h1 {
     display: none;
   }
-  
+/*   
   .logo {
-    /* width: 80px; */
     display: center;
-  }
+  } */
 
   .big-news {
     flex-direction: row;
@@ -154,7 +152,7 @@ align-items: center;
 
   .big-news-text {
     width: 50%;
-    justify-content: center;
+    /* justify-content: center; */
     font-size: 30px;
   }
 
@@ -195,7 +193,7 @@ align-items: center;
     background-color: transparent;
   }
 
-  .navigation > a {
+  nav > a {
     display: flex;
     align-items: center;
     justify-items: right;
