--- a/code/style.css
+++ b/code/style.css
@@ -4,48 +4,36 @@ html {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
-
-/* .header {
-  border: transparent;
-  height: 50px;
-  grid-template-columns: 1fr 1fr 1fr 1fr;
-  padding: 20px;
-  align-items: center;
-  justify-content: space-between; 
-} */
-
-.container {
+.container.grid {
   padding: 2 rem; 
+  display: grid;
+  grid-template-columns: 2fr 1fr 1fr;
+  grid-gap: 1rem;
 }
 
 .title{
-  background-color: blueviolet;
   padding: 1 rem;
 }
 
 .cell {
-  background-color: blueviolet;
   padding: 1 rem;
 }
 
 .meny {
-  font-size: small;
-  background-color: blueviolet;
+  font-size: x-small;
   padding: 1 rem;
+  color: rgb(31, 93, 95);
+  align-self: center;
 }
 
-.grid {
-display: grid;
-grid-template-columns: 2fr 1fr 1fr;
-grid-gap: 1rem;
-}
+/*.second-container {
+  display: grid;
+  grid-template-columns: 1fr
+}*/
 
 .news-img {
-  height: 300px;
-  width: 300px;
-  margin: 5px;
+  width: 100%;
   margin-top: 30px;
-  grid-column: span 4;
 }
 
 img {
@@ -54,22 +42,25 @@ img {
 }
 
 .undertitle {
-  background-color: blueviolet;
   font-style: italic;
   font-size: small;
  } 
 
  button {
   height: 30px;
-  margin: 5px;
-  margin-left: 10px;
   border: 1px solid;
+  border-color: rgb(31, 93, 95);
+  color: rgb(31, 93, 95);
   background-color: #f7f7fa;
   font-size: 12px;
   justify-content: center;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
+.gallery {
+  margin-top: 50px;
+  color: rgb(31, 93, 95);
+}
 
 .grid-container {
   display: grid;
@@ -77,42 +68,89 @@ img {
   gap: 5px; 
   margin-top: 30px;
   margin-bottom: 20px;
-  
 }
 
 img {
   width: 100%;
 }
 
+.bottom-grid-container {
+  display: grid;
+  border: transparent;
+  height: auto;
+  width: auto;
+  grid-template-columns: 1fr; 
+  gap: 5px; 
+  margin-top: 30px;
+  margin-bottom: 20px;
+  justify-content: center;
+  align-items: center;
+  align-self: center;
+}
 
+.grid-item9, .grid-item10, .grid-item11, .grid-item12, .grid-item13, .grid-item14 {
+border: 1px solid;
+border-color: rgb(31, 93, 95);
+align-self: center;
+}
+
+img {
+  width: 100%;
+}
+
+footer {
+  margin-top: 50px;
+  text-align: center;
+  border-top: 1px solid;
+  border-color: rgb(31, 93, 95);
+  padding: 40px;
+  font-size: small;
+  color: rgb(31, 93, 95);
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
 
 @media (min-width: 668px) {
-  .grid-container-top {
+  .container.grid {
       display: grid;
       align-items: center;
       justify-content: space-between;
-      padding: 30px;
+      padding: 10px;
       color: violet;
-      flex-wrap: wrap;
-      grid-column: span 4;
     }
+
+  /*@media (min-width: 668px) {
+    .news-img {
+      width: 300px;
+      height: 300px;
+      margin-top: 30px;
+    }*/
+  
+@media (min-width: 668px) {
+    img {
+    height: auto;
   }
+
+@media (min-width: 668px) {
+  .second-container {
+    display: grid;
+    justify-content: space-between;
+    padding: 10px;
+    grid-template-columns: 1fr 
+  }
+
+@media (min-width: 668px) { 
+.stockholmsyndrome {
+  height: 300px;
+}
 
 @media (min-width: 668px) {
 .grid-container {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(200px,1fr));
+  grid-template-columns: 1fr 1fr; 
   gap: 5px; 
   margin-top: 30px;
   margin-bottom: 20px;
-  grid-column-start: 1;
-  grid-column-end: 4;
-} 
-
-.title {
-  grid-column: span 1/ 1;
 }
 
-.meny {
-  grid-column: span 2/ 6;
-}
+
+
